Setup maven options to profile